--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# Gradle
-# Build your Java project and run tests with Gradle using a Gradle wrapper script.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
 - master
@@ -13,8 +9,8 @@ steps:
 - script: echo My Gradle Application
   displayName: 'Run a one-line script'
 
-  script: gradle build
+- script: gradle build
   displayName: 'Building the gradle application'
 
-  script: gradle run
+- script: gradle run
   displayName: 'Run JAR file'
